Tentando estruturar as transições entre as views (terei que mudar para MVP)

--- a/war/index.html
+++ b/war/index.html
@@ -13,6 +13,11 @@
     <!--                                            -->
     <script type="text/javascript" language="javascript"
             src="GSS/GSS.nocache.js"></script>
+
+    <!-- iframe para habilitar histórico das páginas no GWT -->
+    <iframe src="javascript:''"
+            id="__gwt_historyFrame"
+            style="position:absolute;width:0;height:0;border:0"></iframe>
 </head>
 
 <!--                                           -->
