Faz com que o painel de conteúdo seja rolável (o lado direito da página está cortando)

--- a/war/index.html
+++ b/war/index.html
@@ -13,6 +13,8 @@
     <!--                                            -->
     <script type="text/javascript" language="javascript"
             src="GSS/GSS.nocache.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <!--                                           -->
